<resources>
    <string name="app_name">Tripals</string>
    <string name="welcome">Instant Grouping for Tripals</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="email_sign_in">Sign up with Email</string>
    <string name="no_login">Proceed without login</string>
    <string name="have_account">Already on Tripals? Log in</string>
    <string name="agreement1">By clicking Sign Up, you agree to our</string>
    <string name="agreement2">Term of Service</string>
    <string name="agreement3">and</string>
    <string name="agreement4">Privacy Policy</string>
    <string name="or">OR</string>
    <string name="term_of_service">
        idufsiduhfisudhfisud
        sdfiusdhfi
        sdfishdfuh
        sdfisudhfiusdhfi
        sdufihsdiuf
    </string>
    <string name="privacy_policy">
        idufsiduhfisudhfisud
        sdfiusdhfi
        sdfishdfuh
        sdfisudhfiusdhfi
        sdufihsdiuf
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">Display name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create new account</string>
    <string name="login">Login</string>
    <string name="not_complete_message">You did not complete the entire form.</string>
    <string name="confirm_password_message">Password are not matching</string>
    <string name="required">Required</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password_email_sent">The password reset email is sent.</string>
    <string name="email_not_verified">Your email is not verified, please check email.</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_profile_profile_photo_title">Profile Photo</string>
    <string name="create_profile_gender_title">Gender</string>
    <string name="create_profile_select_gender_title">Select Gender</string>
    <string name="create_profile_birth_date_title">Birth Date</string>
    <string name="create_profile_select_birth_date_title">Select Date</string>
    <string name="create_profile_select_country_title">Select Country</string>
    <string name="create_profile_select_lang_title">Select Language</string>
    <string name="create_profile_select_interests_title">Select Interest</string>
    <string name="create_profile_home_country_title">Home Country</string>
    <string name="create_profile_bio_hint">Share about yourself</string>
    <string name="create_profile_language_title">Language</string>
    <string name="create_profile_interest_title">Interest</string>
    <string-array name="interest_options">
        <item>Food&amp;Drink</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Culture</item>
        <item>Photography</item>
        <item>Nature</item>
        <item>Leisure</item>
    </string-array>
    <string name="create_profile_about_you_title">About you</string>
    <string name="create_profile_create_button">Create</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_expore">Expore</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="create_event_button">Create Event</string>
    <string name="nearby_button">Nearby Me</string>
    <string name="hot_destination">Hot Destinations</string>
    <string name="popular_events">Popular Events</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="tai_pei">Taipei</string>
    <string name="tokyo">Tokyo</string>
    <string name="singapore">Singapore</string>
    <string name="macau">Macau</string>
    <string name="more">More Places</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="query_hint">Search...</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="search_this_area">Search this area</string>
    <string name="details">Details</string>
    <string name="select">Select</string>
    <string name="rating">Rating</string>
    <string name="search_hint">Search...</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="all_selected">All Selected</string>
    <string name="event_name">Event Name</string>
    <string name="event_name_hint">What do you want to call your event?</string>
    <string name="event_description">Description</string>
    <string name="event_description_hint">What will you do? What do you expect?</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="privacy">Privacy</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="openness">Open/Closed for Joining</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="event_quota">Quota?</string>
    <string name="date_time_hint">yy-MM-dd HH:mm</string>
    <string name="location">Location</string>
    <string name="interests">Interests</string>
    <string name="interests_hint">Select relevant to your event</string>
    <string name="create_event">Create</string>
    <string name="select_photo">Select Photo</string>
    <string name="create_event_welcome">Start a new Tripals event</string>
    <string name="not_complete_event_message">You did not complete the event form.</string>
    <string name="create_event_complete_message">Event Created</string>
    <string name="left">place(s) left</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="comment_post">Post</string>
    <string name="comment">Comment</string>
</resources>