<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_expore" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite_black_24dp"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>
