<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="adjustResize"
    tools:context=".ProfileActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-186dp"
        tools:layout_editor_absoluteY="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/create_profile_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/create_profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CreateP_ProfilePhoto_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:text="@string/create_profile_profile_photo_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_profile_textView" />

            <TextView
                android:id="@+id/CreateP_Gender_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_profile_gender_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_imageView" />

            <TextView
                android:id="@+id/CreateP_SelectGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_enter"
                android:hint="@string/create_profile_select_gender_title"
                android:onClick="selectGender"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/CreateP_Gender_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CreateP_Gender_Title"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/CreateP_BirthDate_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_profile_birth_date_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CreateP_Gender_Title" />

            <TextView
                android:id="@+id/CreateP_SelectBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_enter"
                android:hint="@string/create_profile_select_birth_date_title"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/CreateP_BirthDate_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CreateP_BirthDate_Title" />

            <TextView
                android:id="@+id/CreateP_HomeCountry_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_profile_home_country_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CreateP_BirthDate_Title" />

            <TextView
                android:id="@+id/CreateP_SelectHomeCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_enter"
                android:hint="@string/create_profile_select_country_title"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/CreateP_HomeCountry_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CreateP_HomeCountry_Title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/CreateP_Language_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_profile_language_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CreateP_HomeCountry_Title" />

            <TextView
                android:id="@+id/CreateP_SelectLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_enter"
                android:hint="@string/create_profile_select_lang_title"
                android:onClick="selectLanguage"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/CreateP_Language_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CreateP_Language_Title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/CreateP_Interest_Title"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_profile_interest_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CreateP_Language_Title" />

            <TextView
                android:id="@+id/CreateP_SelectInterest"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_enter"
                android:ellipsize="start"
                android:focusable="false"
                android:gravity="right"
                android:hint="@string/create_profile_select_interests_title"
                android:maxLines="2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/CreateP_Interest_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@+id/CreateP_Interest_Title"
                app:layout_constraintTop_toTopOf="@+id/CreateP_Interest_Title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/CreateP_AboutYou_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_profile_about_you_title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CreateP_SelectInterest" />

            <EditText
                android:id="@+id/CreateP_InputBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/round_corner_grey"
                android:ems="10"
                android:hint="@string/create_profile_bio_hint"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:lines="3"
                android:padding="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/CreateProfileButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CreateP_AboutYou_Title"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/avatar_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/select_photo"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/avatar_imageView"
                app:layout_constraintEnd_toEndOf="@+id/avatar_imageView"
                app:layout_constraintStart_toStartOf="@+id/avatar_imageView"
                app:layout_constraintTop_toTopOf="@+id/avatar_imageView" />

            <ImageView
                android:id="@+id/avatar_imageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="60dp"
                app:layout_constraintBottom_toBottomOf="@+id/CreateP_ProfilePhoto_Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CreateP_ProfilePhoto_Title"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/CreateProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_corner_pri"
                android:text="@string/create_profile_create_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/create_porfile_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>